--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+		<h1>"Why I want to become a developer?"</h1>
+	<p>"As a mechanical engineer i wanted to explore more" </p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
